--- a/analyses/5community_climate_ecology/analyses/Step_0.1_data_transformations_statewide.Rmd
+++ b/analyses/5community_climate_ecology/analyses/Step_0.1_data_transformations_statewide.Rmd
@@ -33,9 +33,11 @@ require(vegan)
 
 ```{r}
 
-dat_dir <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data" 
+dat_dir <- "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data/" 
 
 kelp_combined <- read.csv(file.path(dat_dir, "kelp_swath_upc_statewide.csv"))
+kelp_swath <- read.csv(file.path(dat_dir, "kelp_swath_mpa_year_statewide.csv"))
+kelp_upc <- read.csv(file.path(dat_dir, "kelp_upc_mpa_year_statewide.csv"))
 kelp_fish <- read.csv(file.path(dat_dir, "kelp_fish_statewide.csv"))
 rocky <- read.csv(file.path(dat_dir, "rocky_statewide.csv"))
 
@@ -53,6 +55,12 @@ rocky <- read.csv(file.path(dat_dir, "rocky_statewide.csv"))
 #should be included at this stage. 
 
 kelp_invalg1 <- kelp_combined %>% #filter(region4=='central') %>%
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
+kelp_swath1 <- kelp_swath %>%
+  select(where(~ any(. != 0)))%>%
+  filter(year>=2007)
+kelp_upc1 <- kelp_upc %>%
   select(where(~ any(. != 0)))%>%
   filter(year>=2007)
 kelp_fish1 <- kelp_fish %>% #filter(region4=='central') %>%
@@ -87,7 +95,7 @@ kelp_invalg_envr_vars <-  kelp_invalg2 %>%
 
 
 #define data for matrix
-kelp_invalg_mat_data <- kelp_invalg2%>%
+kelp_invalg_ord_data <- kelp_invalg2%>%
               ungroup()%>%
               dplyr::select(26:ncol(.))
 
@@ -96,7 +104,71 @@ kelp_invalg_mat_data <- kelp_invalg2%>%
 
 #generate a BC dissim matrix
 kelp_invalg_distmat <- 
-    vegdist(kelp_invalg_mat_data, method = "bray", na.rm=T) #generates a BC dissim matrix
+    vegdist(kelp_invalg_ord_data, method = "bray", na.rm=T) #generates a BC dissim matrix
+
+#kelp swath processing--------------------------------------------------
+
+kelp_swath2 <- kelp_swath1 %>%
+                  mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
+                  dplyr::select(desig_state, everything())%>%
+                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref") 
+
+#define grouping vars
+kelp_swath_group_vars <- kelp_swath2%>%
+                    dplyr::select(1:9)
+
+#define envr vars
+kelp_swath_envr_vars <-  kelp_swath2 %>%
+  dplyr::select(c(SST="sst_monthly_anom",CUTI="cuti_monthly_anom",BEUTI="beuti_monthly_anom",MOCI="annual_MOCI"))
+
+
+#define data for matrix
+kelp_swath_ord_data <- kelp_swath2%>%
+              ungroup()%>%
+              dplyr::select(26:ncol(.))
+
+kelp_swath_ord_data[is.na(kelp_swath_ord_data)] <- 0
+
+#calculate relative abundance
+kelp_swath_rel <- decostand(kelp_swath_ord_data, method = "hellinger")
+
+#generate a BC dissim matrix
+kelp_swath_distmat <- 
+    vegdist(kelp_swath_ord_data, method = "bray", na.rm=T) #generates a BC dissim matrix
+
+
+
+
+#kelp upc processing--------------------------------------------------
+
+kelp_upc2 <- kelp_upc1 %>%
+                  mutate(desig_state = paste(mpa_defacto_designation,MHW))%>%
+                  dplyr::select(desig_state, everything())%>%
+                  filter(mpa_defacto_designation=="smr" | mpa_defacto_designation=="ref") 
+
+#define grouping vars
+kelp_upc_group_vars <- kelp_upc2%>%
+                    dplyr::select(1:9)
+
+#define envr vars
+kelp_upc_envr_vars <-  kelp_upc2 %>%
+  dplyr::select(c(SST="sst_monthly_anom",CUTI="cuti_monthly_anom",BEUTI="beuti_monthly_anom",MOCI="annual_MOCI"))
+
+
+#define data for matrix
+kelp_upc_ord_data <- kelp_upc2%>%
+              ungroup()%>%
+              dplyr::select(26:ncol(.))
+
+
+#counts are already relative, so apply sqrt transform to match "hellinger
+kelp_upc_rel <- kelp_upc_ord_data %>%
+             mutate(across(1:ncol(.),  function(x) sqrt(x)))
+
+#generate a BC dissim matrix
+kelp_upc_distmat <- 
+    vegdist(kelp_upc_rel, method = "bray", na.rm=T) #generates a BC dissim matrix
+
 
 
 
@@ -174,23 +246,27 @@ rocky_distmat <-
 
 ###save group vars
 #output_path <-  "/home/shares/ca-mpa/data/sync-data/monitoring/processed_data/community_climate_derived_data/statewide_data" 
-#save(kelp_invalg_group_vars,kelp_fish_group_vars,
+#save(kelp_invalg_group_vars,kelp_fish_group_vars,kelp_swath_group_vars,
+#     kelp_upc_group_vars,
 #  rocky_group_vars,
 #    file = file.path(output_path, "group_vars_statewide.rda"))
 
 #save community matrices
-#save(kelp_invalg_ord_data,kelp_fish_ord_data,
+#save(kelp_invalg_ord_data,kelp_fish_ord_data, kelp_swath_ord_data,
+#     kelp_upc_ord_data,
 #  rocky_ord_data,
 #    file = file.path(output_path, "comm_data_statewide.rda"))
 
 
 #save envr vars 
 #save(kelp_invalg_envr_vars,kelp_fish_envr_vars,
+#     kelp_swath_envr_vars, kelp_upc_envr_vars,
 #  rocky_envr_vars,
 #    file = file.path(output_path, "envr_vars_statewide.rda"))
 
 #save distance matrices
-#save(kelp_invalg_distmat,kelp_fish_distmat,
+#save(kelp_invalg_distmat,kelp_fish_distmat, kelp_swath_distmat,
+#     kelp_upc_distmat,
 #     rocky_distmat,
 #    file = file.path(output_path, "distance_matrices_BC_statewide.rda"))
 ```
